--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 	<head>
 		<title>shoes i like</title>
 
-		<style>
-			img{
-				max-width:100px;
-			}
-		</style>
+		<link rel="stylesheet" href="css/main.css">
 
 		<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 		<script src="https://js.moltin.com/v1"></script>
@@ -15,6 +11,7 @@
 	</head>
 	<body>
 		<div id="page">
+			<h1>my favourite shoes</h1>
 		  
 		</div>
 		<script src="js/main.js"></script>
