--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<body>
 		<div id="page">
 			<h1>my favourite shoes</h1>
+			<p>tap a shoe for details</p>
 		  
 		</div>
 		<script src="js/main.js"></script>
