animation and loading screen

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<div id="page">
 			<h1>my favourite shoes</h1>
 			<p>tap a shoe for details</p>
+			<p class="loading">LOADING</p>
 		  
 		</div>
 		<script src="js/main.js"></script>
