--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 	<head>
 		<title>shoes i like</title>
 
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimal-ui">
+		<meta charset="utf-8">
+
 		<link rel="stylesheet" href="css/main.css">
-
-		<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-		<script src="https://js.moltin.com/v1"></script>
-
 	</head>
 	<body>
 		<div id="page">
@@ -16,6 +15,7 @@
 			<p class="loading">LOADING</p>
 		  
 		</div>
+		<script src="https://js.moltin.com/v1"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
